New changes in the HTML and CSS source.

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,39 @@
-.
+*{
+  margin: 0;
+  padding: 0;
+}
+:root {
+  font-size: 16px;
+  font-family: 'Open Sans';
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418
+}
+
+body{
+    color: black;
+    background-color: white;
+    margin: 0;
+    padding: 0;
+}
+
+main{
+  margin-left: 5rem;
+  padding: 1rem;
+}
+
+
+body::-webkit-scrollbar-track{
+  background: #1b1a1a;
+}
+
+body::-webkit-scrollbar-thumb{
+  background: #2186d7;
+}
+
+.navbar{
+  width: 5rem;
+  height: 100hv;
+  position: fixed;
+}
