--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,11 @@
-*{
-  margin: 0;
-  padding: 0;
-}
 :root {
   font-size: 16px;
   font-family: 'Open Sans';
   --text-primary: #b6b6b6;
   --text-secondary: #ececec;
   --bg-primary: #23232e;
-  --bg-secondary: #141418
+  --bg-secondary: #141418;
+  --transition-speed: 600ms;
 }
 
 body{
@@ -18,22 +15,27 @@ body{
     padding: 0;
 }
 
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #0dcfd5;
+}
+
 main{
   margin-left: 5rem;
   padding: 1rem;
 }
 
 
-body::-webkit-scrollbar-track{
-  background: #1b1a1a;
-}
-
-body::-webkit-scrollbar-thumb{
-  background: #2186d7;
-}
-
-.navbar{
-  width: 5rem;
-  height: 100hv;
+.navbar {
   position: fixed;
+  background-color: var(--bg-primary);
+  transition: width 600ms ease;
+  overflow: scroll;
 }
